# GuardianesDeLaLadera

./: .gitignore  README.md
guardianes-ladera-backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
guardianes-ladera-backend/alembic/: env.py
guardianes-ladera-backend/alembic/versions/: 20260324_0001_initial_schema.py  20260325_0002_spatial_shadow_columns.py  20260325_0003_zone_outcome_labels.py  20260325_0004_label_review_metadata.py  20260325_0005_label_review_queue.py  20260325_0006_label_training_eligibility.py  20260325_0007_label_release_workflow.py  20260325_0008_label_release_assignment.py  20260325_0009_training_release_escalation.py  (+5 more)
guardianes-ladera-backend/app/: main.py  worker.py
guardianes-ladera-backend/scripts/: bootstrap_operational_catalog.py  build_official_structural_bundle.py  export_frontend_seed.js  export_training_dataset.py  import_official_structural_catalog.py  purge_legacy_runtime_data.py  rebuild_official_runtime.py  train_spatial_seed_model.py
guardianes-ladera-backend/tests/: conftest.py  test_additive_splines.py  test_api.py  test_api_modern_models.py  test_beta_regression.py  test_datasets.py  test_feature_ingestion_ideam.py  test_features.py  test_inference.py  test_landslide_inventory.py  test_migrations.py  test_model_evaluations.py  test_model_selection_and_shadow.py  test_provider_adapters.py  test_provider_parsers.py  test_real_data_policy.py  test_scheduler.py  test_spatial.py  test_tasks.py  test_training.py  test_tree_boosting.py  test_xgboost_models.py
(+128 files in other folders)
