[project]
name = "guardianes-ladera-backend"
version = "0.1.0"
description = "FastAPI backend for Guardianes de la Ladera"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.12",
  "geoalchemy2>=0.18.1",
  "psycopg[binary]>=3.2.9",
  "pyshp>=3.0.3",
  "PyJWT>=2.10.1",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.39",
  "uvicorn[standard]>=0.34.0",
  "xgboost>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
